# django-sns

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
posts/: admin.py  models.py  serializers.py  tests.py
users/: admin.py  models.py  serializers.py  tests.py
