[project]
name = "djangosns"
version = "0.1.0"
description = "Django SNS"
authors = [
    {name = "kikiru328",email = "kikiru328@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
