[project]
name = "django-sns"
version = "0.1.0"
description = "Django SNS from Flab Mentoring"
authors = [
    {name = "kikiru328",email = "kikiru328@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

